Fixed borders on home page
moo

--- a/GoldenEagleOrganics/siteCss/BSOverride.css
+++ b/GoldenEagleOrganics/siteCss/BSOverride.css
@@ -2,6 +2,10 @@
     background-color: #EADFCD;
 }
 
+.black-links > a {
+    color: #404040;
+}
+
 .active > a {
     background-color: #BF985A !important;
 }
