working on product overlays
moo

--- a/GoldenEagleOrganics/siteCss/BSOverride.css
+++ b/GoldenEagleOrganics/siteCss/BSOverride.css
@@ -44,3 +44,13 @@
 .nav > li > a {
     padding: 10px 30px 10px 30px !important;
 }
+
+.product-overlay {
+    /*bottom: 50px;
+    left: 0;
+    height: 50px;
+    width: 100%;*/
+    background-color: rgba(0,0,0,0.5);
+    z-index: 3;
+
+}
